--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-native": "^3.10.0"
   },
   "devDependencies": {
+    "@gravitywelluk/eslint-plugin": "^1.0.1",
     "@types/node": "^14.11.2",
     "eslint": "^7.10.0",
     "git-branch-is": "^4.0.0",
