Updated pre-commit command

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint:debug": "yarn eslint ./ --debug",
     "pub": "yarn tsc:build-clean && yarn git-branch-is master && npm version patch && npm publish --access public && git push --follow-tags",
     "post-checkout": "yarn",
-    "pre-commit": "yarn eslint",
+    "pre-commit": "yarn eslint:fix",
     "pre-push": "yarn tsc:build-clean"
   },
   "husky": {
