--- a/.github/workflows/publish-post-merge-master.yml
+++ b/.github/workflows/publish-post-merge-master.yml
@@ -41,7 +41,6 @@ jobs:
         uses: actions/setup-node@v1.4.3
         with:
           node-version: 12.x
-          registry-url: "https://npm.pkg.github.com"
 
       # Build the package
       - name: Build the package
@@ -63,7 +62,7 @@ jobs:
       - name: Bump the package version
         run: npm version patch -m "Bumped version to %s"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       # Push the bumped version back to GitHub
       - name: Push the bumped version back to GitHub
@@ -73,5 +72,5 @@ jobs:
       - name: Publish the package
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
