Updated the publish CI to run only on the master branch

--- a/.github/workflows/publish-post-merge-master.yml
+++ b/.github/workflows/publish-post-merge-master.yml
@@ -8,9 +8,8 @@ on:
     # Do not run if the push is tagged
     tags-ignore:
       - '**'
-
-    branches-ignore:
-      - '!master'
+    branches:
+      - 'master'
 
 jobs:
   build-and-publish:
