Removed test.txt file and added paths-ignore filepaths to CI workflow

--- a/.github/workflows/publish-post-merge-master.yml
+++ b/.github/workflows/publish-post-merge-master.yml
@@ -8,6 +8,11 @@ on:
     # Do not run if the push is tagged
     tags-ignore:
       - '**'
+    paths-ignore:
+      - '.vscode/**'
+      - '.gitignore'
+      - 'LICENSE'
+      - '**.md'
     branches:
       - 'master'
 
