--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "@gravitywelluk/eslint-plugin",
   "version": "1.0.11",
   "description": "Gravitywell defined ESLint rule sets as a ESLint plugin",
+  "keywords": [
+    "gravitywell",
+    "gravitywelluk",
+    "eslint",
+    "typescript-eslint",
+    "react-eslint",
+    "react-native-eslint"
+  ],
   "main": "dist/index.js",
   "repository": "git@github.com:GravitywellUK/eslint-plugin.git",
   "bugs": {
