--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,36 @@ jobs:
         with:
           node-version: 12.x
 
+      # Get yarn cache directory path
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      # Cache dependencies and build to improve workflow execution time
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+
       # Install package dependencies
       - name: Install package dependencies
-        run: yarn
+        # --ignore-engines  - ignore engines check
+        # --frozen-lockfile - don't generate a lockfile and fail if an update is needed
+        # --ignore-scripts  - don't run lifecycle scripts
+        run: yarn --ignore-engines --frozen-lockfile --ignore-scripts
 
       # Check linting succeeds
       - name: Check linting succeeds
-        run: yarn eslint
+        run: yarn eslint:fix
 
       # Ensure package build successfully
       - name: Ensure package build successfully
         run: yarn tsc:build-clean
+
+      # Double check that no code has changed
+      - name: Double check that no code has changed
+        run: yarn check:clean-diff-after-install
