Added type annotation spacing. Added arrow function spacing. Added post-merge Git hook

--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "eslint:fix": "yarn eslint --fix",
     "eslint:debug": "yarn eslint --debug",
     "post-checkout": "yarn",
+    "post-merge": "yarn tsc:build",
     "pre-commit": "yarn eslint:fix",
     "pre-push": "yarn tsc:build-clean"
   },
   "husky": {
     "hooks": {
       "post-checkout": "yarn post-checkout",
+      "post-merge": "yarn post-merge",
       "pre-commit": "yarn pre-commit",
       "pre-push": "yarn pre-push"
     }
