Added peer dependancies to package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node": "^10.12.0 || >=12.0.0"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "files": [
     "dist",
@@ -72,5 +73,8 @@
     "git-branch-is": "^4.0.0",
     "husky": "^4.3.0",
     "typescript": "^4.0.3"
+  },
+  "peerDependencies": {
+    "eslint": "^7.10.0"
   }
 }
