--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
 
   publish-version:
     name: Publish version
-    if: ${{ github.ref == 'refs/heads/master' && !contains(toJSON(github.event.head_commit.message), 'Chore(bumped version to') }}
+    if: ${{ !contains(toJSON(github.event.head_commit.message), 'Chore(bumped version to') }}
     needs: [build-and-test]
     runs-on: ubuntu-latest
     steps:
