--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ env:
 jobs:
   build-and-test:
     name: Build and test
+    if: ${{ !contains(toJSON(github.event.head_commit.message), 'bumped version to') }}
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository
@@ -77,7 +78,7 @@ jobs:
 
   publish-version:
     name: Publish version
-    if: github.ref == 'refs/heads/master' && !contains(toJSON(github.event.head_commit.message), 'bumped version to')
+    if: ${{ github.ref == 'refs/heads/master' && !contains(toJSON(github.event.head_commit.message), 'Chore(bumped version to') }}
     needs: [build-and-test]
     runs-on: ubuntu-latest
     steps:
