--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ env:
 jobs:
   build-and-test:
     name: Build and test
-    if: ${{ !contains(toJSON(github.event.head_commit.message), 'bumped version to') }}
+    if: ${{ !contains(toJSON(github.event.head_commit.message), 'published release :rocket:') }}
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository
@@ -77,8 +77,8 @@ jobs:
         run: yarn check:clean-diff-after-install
 
   publish-version:
-    name: Publish version
-    if: ${{ github.ref == 'refs/heads/master' && !contains(toJSON(github.event.head_commit.message), 'Chore(bumped version to') }}
+    name: Publish release
+    if: ${{ github.ref == 'refs/heads/master' && !contains(toJSON(github.event.head_commit.message), 'published release :rocket:') }}
     needs: [build-and-test]
     runs-on: ubuntu-latest
     steps:
@@ -90,18 +90,6 @@ jobs:
 
       - name: echo github.ref
         run: echo ${{ github.ref }}
-
-      # Verify head of master hasn't changed
-      - name: Verify head of master hasn't changed
-        run: |
-          # We ensure that the latest commit on master is still the one we expected when
-          # we started the release job, otherwise we exit
-          if [ "$GITHUB_SHA" != "$(git rev-parse --verify HEAD)" ]; then
-              echo "ERROR: The commit SHA at the HEAD of master has changed"
-              echo "Expected: $GITHUB_SHA"
-              echo "Actual: $(git rev-parse --verify HEAD)"
-              exit 1;
-          fi
 
       # Setup Node.js environment
       - name: Setup Node.js environment
@@ -142,9 +130,22 @@ jobs:
           git config user.name '${{ secrets.GH_USERNAME }}'
           git config user.email '${{ secrets.GH_EMAIL }}'
 
+      # Verify head of master hasn't changed
+      - name: Verify head of master hasn't changed
+        run: |
+          # We ensure that the latest commit on master is still the one we expected when
+          # we started the release job, otherwise we exit
+          if [ "$GITHUB_SHA" != "$(git rev-parse --verify HEAD)" ]; then
+              echo "ERROR: The commit SHA at the HEAD of master has changed"
+              echo "Expected: $GITHUB_SHA"
+              echo "Actual: $(git rev-parse --verify HEAD)"
+              exit 1;
+          fi
+
       # Bump the package version
       - name: Bump the package version
-        run: npm version patch -m "Chore(bumped version to %s)"
+        run: |
+          npm version patch -m "Chore: published release :rocket: %s"
 
       # Push the bumped version back to GitHub
       - name: Push the bumped version back to GitHub
