Updated JSON rules to add array newline after more than 1 children

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "lib": [
-      "ES6"
-    ],
+    "lib": [ "ES6" ],
     "module": "CommonJS",
     "moduleResolution": "node",
     "skipLibCheck": true,
@@ -21,9 +19,7 @@
     "rootDir": "./src",
     "outDir": "dist",
     "paths": {
-      "src/*": [
-        "./src/*"
-      ]
+      "src/*": [ "./src/*" ]
     }
   }
 }
