--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gravitywelluk/eslint-plugin",
   "description": "Gravitywell defined ESLint rule sets as a ESLint plugin",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "keywords": [
     "gravitywell",
     "gravitywelluk",
@@ -15,7 +15,9 @@
     "url": "https://github.com/GravitywellUK/eslint-plugin/issues"
   },
   "author": "GravitywellUK",
-  "contributors": [ "Luke Baker <luke.baker@live.com>" ],
+  "contributors": [
+    "Luke Baker <luke.baker@live.com>"
+  ],
   "main": "dist/index.js",
   "license": "MIT",
   "private": false,
@@ -54,7 +56,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,json}": [ "eslint --fix" ]
+    "*.{js,ts,json}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.2.0",
