--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,12 @@
   },
   "typescript.format.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
-  "eslint.enable": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
     "javascript",
-    "javascriptreact",
     "typescript",
-    "typescriptreact"
+    "json",
+    "jsonc"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
@@ -21,10 +20,18 @@
   "editor.formatOnSave": false,
   "[typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
   },
   "[javascript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "editor.formatOnSave": true
   },
+  "[json]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "editor.formatOnSave": true
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "editor.formatOnSave": true
+  }
 }
