--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "url": "https://github.com/GravitywellUK/eslint-plugin/issues"
   },
   "author": "GravitywellUK",
-  "contributors": [
-    "Luke Baker <luke.baker@live.com>"
-  ],
+  "contributors": [ "Luke Baker <luke.baker@live.com>" ],
   "main": "dist/index.js",
   "license": "MIT",
   "private": false,
@@ -42,23 +40,10 @@
     "lint": "eslint . --ext .js,.ts,.json",
     "lint:fix": "yarn lint --fix",
     "lint:debug": "yarn lint --debug",
-    "post-checkout": "yarn",
-    "post-merge": "yarn && yarn build:clean",
-    "pre-commit": "yarn lint-staged",
-    "pre-push": "yarn build:clean"
-  },
-  "husky": {
-    "hooks": {
-      "post-checkout": "yarn post-checkout",
-      "post-merge": "yarn post-merge",
-      "pre-commit": "yarn pre-commit",
-      "pre-push": "yarn pre-push"
-    }
+    "postinstall": "yarn husky install"
   },
   "lint-staged": {
-    "*.{js,ts,json}": [
-      "eslint --fix"
-    ]
+    "*.{js,ts,json}": [ "eslint --fix" ]
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.2.0",
@@ -73,7 +58,7 @@
     "@gravitywelluk/eslint-plugin": "^1.0.1",
     "@types/node": "^14.11.2",
     "eslint": "^7.10.0",
-    "husky": "^4.3.0",
+    "husky": "^5.0.4",
     "lint-staged": "^10.5.0",
     "typescript": "^4.0.3"
   },
