--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,12 @@
   },
   "typescript.format.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
-  "eslint.enable": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
     "javascript",
-    "javascriptreact",
     "typescript",
-    "typescriptreact"
+    "json",
+    "jsonc"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
@@ -24,6 +23,14 @@
     "editor.formatOnSave": false
   },
   "[javascript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "editor.formatOnSave": true
+  },
+  "[json]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "editor.formatOnSave": true
+  },
+  "[jsonc]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "editor.formatOnSave": true
   },
