Code changes from linting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "lib": [ "ES6" ],
+    "lib": [
+      "ES6"
+    ],
     "module": "CommonJS",
     "moduleResolution": "node",
     "skipLibCheck": true,
@@ -19,7 +21,9 @@
     "rootDir": "./src",
     "outDir": "dist",
     "paths": {
-      "src/*": [ "./src/*" ]
+      "src/*": [
+        "./src/*"
+      ]
     }
   }
 }
