--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "lint": "eslint . --ext .js,.ts,.json",
     "lint:fix": "yarn lint --fix",
     "lint:debug": "yarn lint --debug",
-    "postinstall": "yarn husky install"
+    "postinstall": "yarn husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "lint-staged": {
     "*.{js,ts,json}": [
@@ -64,6 +66,7 @@
     "eslint": "^7.10.0",
     "husky": "^5.0.4",
     "lint-staged": "^10.5.0",
+    "pinst": "^2.1.1",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
