--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/parser": "^4.22.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^3.0.0",
+    "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.10.0"
