--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ on:
       - '**'
 
 env:
-  NODE_VERSION: 12
+  NODE_VERSION: 14
 
 jobs:
   build-and-test:
@@ -82,6 +82,8 @@ jobs:
       # Checks-out your repository
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_AUTH_TOKEN }}
 
       - name: echo github.ref
         run: echo ${{ github.ref }}
