Reduced node version requirements

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "main": "dist/index.js",
   "license": "MIT",
   "engines": {
-    "node": "^20.0.0"
-  },
+    "node": ">=18.0.0"
+  },  
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
